[project]
name = "payroll-fastapi"
version = "0.1.0"
description = "Payroll API built with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.39.0",
]
